上传剩下的网页

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				<span><img src="img/zuobiao.png"/>  凯通大厦</span>
 			</div>
 			<div class="search">
-				<a href="">
+				<a href="sousuo.html">
 					<img src="img/sousuo.png"/>
 					<span>请输入您要搜索的店铺</span>
 				</a>
@@ -610,7 +610,7 @@
 		<ul>
 			<li><a href=""><img src="img/shouyelan.png"/></a></li>
 			<li><a href=""><img src="img/faxianhui.png"/></a></li>
-			<li><a href=""><img src="img/dingdanhui.png"/></a></li>
+			<li><a href="dingdan.html"><img src="img/dingdanhui.png"/></a></li>
 			<li><a href=""><img src="img/wodehui.png"/></a></li>
 		</ul>
 	</div>
