--- a/caipinxq.html
+++ b/caipinxq.html
@@ -106,7 +106,7 @@
 				<img src="img/langou.png"/>
 				¥89.4 另需配送费2.5元
 				<div>
-					去结算
+					<a href="jiesuan.html">去结算</a>
 				</div>
 			</div>
 		</div>
