--- a/jiesuan.html
+++ b/jiesuan.html
@@ -101,7 +101,7 @@
 				<img src="img/langou.png"/>
 				¥89.4 另需配送费2.5元
 				<div>
-					去结算
+					<a href="chenggong.html">去结算</a>
 				</div>
 			</div>
 		</div>
