--- a/index.html
+++ b/index.html
@@ -611,7 +611,7 @@
 			<li><a href=""><img src="img/shouyelan.png"/></a></li>
 			<li><a href=""><img src="img/faxianhui.png"/></a></li>
 			<li><a href="dingdan.html"><img src="img/dingdanhui.png"/></a></li>
-			<li><a href=""><img src="img/wodehui.png"/></a></li>
+			<li><a href="gerenzhongxin.html"><img src="img/wodehui.png"/></a></li>
 		</ul>
 	</div>
 </body>
